--- a/ros_package/my_slam/CMakeLists.txt
+++ b/ros_package/my_slam/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   pcl_conversions
   pcl_ros
 )
+set(CMAKE_CXX_STANDARD 11)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
